--- a/styles/style.css
+++ b/styles/style.css
@@ -6,21 +6,69 @@
   /* выше установили ограничение по максимальной ширине */
   margin: 0 auto;
   /* выше для экранов больше 1600px отцентрировали весь контент */
-  font-family: 'Helvetica Neue', Arial, sans-serif;
+  font-family: "Helvetica Neue", "Arial", sans-serif;
 }
 
 .header {
-  height: 100vh;
+  display: flex;
   min-height: 600px;
   max-height: 756px;
   /* выше установили ограничения для секции */
+
 }
 
-/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
 .header__square-pic {
   height: 568px;
   width: 568px;
 }
+
+.logo {
+  background-image: url(..\images\logo_place_header.svg);
+  height: 32px;
+  width: 228px;
+
+}
+
+
+
+.logo_place_header {
+  position: absolute;
+  left: 64px;
+  top: 30px;
+  z-index: 1;
+}
+
+.header__title{
+  position: relative;
+  align-self:center;
+  left: 64px;
+}
+
+.header__subtitle{
+  height: 80px;
+  width: 388px;
+  position: absolute;
+  bottom: 30px;
+  left: 64px;
+  margin: 0px;
+
+}
+
+.header__main-illustration {
+  background-image: url(..\images\header-image.png);
+  height: 765px;
+  width: 608px;
+}
+
+
+.flex-column {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+
+
 
 /* и элемента с модификатором вида ключ-значение */
 .table__cell_theme_dark {
