--- a/styles/style.css
+++ b/styles/style.css
@@ -130,10 +130,52 @@
   font-weight: 600;
 }
 
+
+.section-title {
+  margin-top: 100px;
+  font-size: 60px;
+  line-height: 1.15;
+  font-weight: 600;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.section-subtitle {
+  margin-top: 20px;
+  font-size: 24px;
+  line-height: 34px;
+  font-weight: 600;
+}
+
+.digits {
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+}
+
+.table {
+  display: flex;
+  width: 1100px;
+  flex-flow: column wrap;
+}
+
+.table__row {
+  display: flex;
+  flex-flow: row;
+  margin: top 60px;
+}
+
 /* и элемента с модификатором вида ключ-значение */
-.table__cell_theme_dark {
+.table__cell_theme_dark-side {
   width: 200px;
   color: white;
   margin-right: 0;
   margin-top: 80px;
+}
+
+.table__cell_theme_white-side {
+  width: 250px;
+  color: #000;
+  margin-right: 0;
+  margin-top: 60px;
 }
