--- a/styles/style.css
+++ b/styles/style.css
@@ -16,6 +16,7 @@
   max-height: 756px;
   /* выше установили ограничения для секции */
   position: relative;
+  background-color: #f2f2f2;
 }
 
 /* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
@@ -80,16 +81,216 @@
   z-index: -1;
 }
 
-.flex-column {
+.header__flex-column {
   display: flex;
   height: 100%;
 }
 
 
+.main {
+  display: flex;
+  position: relative;
+  justify-content: center;
+}
+
+.description {
+  display: flex;
+  justify-content: center;
+  margin: 100px 0px 0px 0px;
+}
+
+.two-columns {
+  width: 80%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.two-columns__brief {
+  width: 175px;
+  color: #2f80ed;
+  font-size: 18px;
+  line-height: 1.2;
+  font-weight: normal;
+  margin: 0px;
+}
+
+.two-columns__main-text {
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  min-width: 784px;
+}
+
+.two-columns__paragraph {
+  font-size: 24px;
+  line-height: 34px;
+  font-weight: normal;
+  margin: 0px;
+}
+
+.two-columns__paragraph_margin {
+  margin: 30px 0px;
+}
+
+.two-columns__span-accent {
+  font-size: 24px;
+  line-height: 34px;
+  font-weight: 600;
+}
+
+
+.digits {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+}
+
+.section-title {
+  text-align: center;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: 600;
+}
+
+
+.section-title_theme_white {
+  margin: 100px 0 0 0;
+
+}
+
+.section-subtitle {
+  margin: 0px;
+  margin-top: 20px;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  text-align: center;
+}
+
+.table {
+  width: 1100px;
+  display: flex;
+  flex-direction: column;
+  margin: 0px auto 100px auto;
+}
+
+
+.table__row {
+  display: flex;
+  justify-content: space-between;
+}
+
+.table__cell_theme_white {
+  width: 250px;
+  color: rgb(0, 0, 0);
+  margin-top: 60px;
+}
+
+.table__heading {
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: 600;
+  margin: 0 0 20px 0;
+}
+
+.table__text {
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  margin: 0 0 20px 0;
+}
+
+
+.feynman {
+  background-color: #f2f2f2;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  text-align: center;
+  position: relative;
+  height: 890px;
+}
+
+
+.feynman__title {
+  width: 648px;
+  margin: 0px;
+  line-height: 1.15;
+  font-size: 120px;
+  font-weight: 600;
+  z-index: 1;
+  margin: 100px 0 0 0;
+}
+
+.feynman__subtitle {
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  z-index: 1;
+  margin: 70px 0 0 0;
+}
+
+.feynman__link {
+  position: absolute;
+  right: 48px;
+  top: 50%;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  z-index: 1;
+}
+
+.feynman__image {
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  height: 637px;
+  width: 867px;
+  z-index: 0;
+
+}
+
+
+.kaufman {
+  background-color: #1f1f1f;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  position: relative;
+  color: white;
+  z-index: -2;
+  overflow: hidden;
+}
+
+
 /* и элемента с модификатором вида ключ-значение */
-.table__cell_dark {
+.table__cell_theme_dark {
   width: 200px;
   color: white;
   margin-right: 0;
   margin-top: 80px;
+}
+
+.table__heading_theme_dark {
+  text-align: center;
+  margin: 80px 0 0 0;
+}
+
+.section-title_theme_dark {
+  width: 60%;
+  margin: 90px 0 0 0;
+}
+
+.section-subtitle_theme_dark {
+  width: 60%;
+}
+
+.kaufman__image {
+  position: absolute;
+  top: 0px;
+  right: -210px;
+  height: 877px;
+  width: 877px;
+  z-index: -1;
+
 }
