--- a/styles/style.css
+++ b/styles/style.css
@@ -10,12 +10,9 @@
 
 }
 
-.link {
-  text-decoration: none;
-}
-
 .header__link {
   color: #2f80ed;
+  text-decoration: none;
 }
 
 .header {
@@ -54,8 +51,8 @@
   z-index: 1;
   font-size: 102px;
   line-height: 96px;
-  width: 730px;
   font-weight: 600;
+  width: 730px;
 }
 
 .header__subtitle {
@@ -246,6 +243,7 @@
   font-size: 36px;
   font-weight: normal;
   z-index: 1;
+  text-decoration: none;
 }
 
 .feynman__image {
@@ -316,7 +314,6 @@
   justify-content: space-between;
   z-index: 0;
   position: relative;
-  align-items: center;
   width: 90%;
   color: #f2f2f2;
   margin: 60px auto 40px auto;
@@ -337,15 +334,36 @@
   left: 0px;
   bottom: 0px;
   margin: 18px 0px;
+  font-size: 18px;
+  line-height: 25px;
+  font-weight: normal;
 }
 
 .footer__column_content_copyright {
   flex-basis: 711px;
 }
 
+.footer__column_content_info {
+  display: flex;
+  align-content: flex-start;
+  flex-direction: column;
+}
+
+.footer__column_content_social {
+  display: flex;
+  align-content: flex-start;
+  flex-direction: column;
+}
+
 .flex_column {
   display: flex;
   flex-flow: column;
+}
+
+.footer__column-link {
+  display: block;
+  text-decoration: none;
+  color: #f2f2f2;
 }
 
 
@@ -357,11 +375,32 @@
   color: #f2f2f2;
 }
 
-.footer__column-link:link {
-  color: #f2f2f2;
-}
-
 .footer__column_content_social {
   display: flex;
   flex-direction: column;
+}
+
+
+
+.footer__column-links {
+  margin: 20px 0 16px 0;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+.footer__column-heading {
+  margin: 0px;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: 600;
+
+}
+
+.social-icon {
+  margin: 0 10px 0 0;
+  height: 16px;
+  width: 16px;
+  line-height: 25px;
+  font-weight: normal;
 }
