--- a/styles/style.css
+++ b/styles/style.css
@@ -22,7 +22,8 @@
   /* выше установили ограничения для секции */
   position: relative;
   background-color: #f2f2f2;
-  z-index: -1;
+  z-index: 0;
+  display: flex;
 }
 
 /* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
@@ -33,7 +34,7 @@
   right: 0px;
   top: 64px;
   background-color: #2f80ed;
-  z-index: -1;
+  z-index: 0;
 }
 
 .logo {
@@ -46,18 +47,18 @@
   position: absolute;
   left: 64px;
   top: 30px;
-  z-index: 1;
+  z-index: 3;
 }
 
 .header__title {
   position: relative;
   align-self: center;
-  left: 64px;
-  z-index: 1;
+  z-index: 2;
   font-size: 102px;
   line-height: 96px;
   font-weight: 600;
   width: 730px;
+  margin: 0 0 0 64px;
 }
 
 .header__subtitle {
@@ -65,26 +66,26 @@
   position: absolute;
   bottom: 30px;
   left: 64px;
-  z-index: 1;
+  z-index: 2;
   font-size: 18px;
   line-height: 25px;
   font-weight: normal;
+  margin: 0;
 }
 
 .header__main-illustration {
-  background-image: url(../images/header-image.png);
-  background-size: cover;
   height: 608px;
   width: 765px;
   position: absolute;
   bottom: 0px;
   right: 0px;
+  z-index: 1;
 }
 
-.header__flex-column {
+/* .header__flex-column {
   display: flex;
   height: 100%;
-}
+} */
 
 
 .main {
@@ -125,12 +126,14 @@
   font-size: 24px;
   line-height: 34px;
   font-weight: normal;
-  margin: 0px;
+  margin: 0 0 30px 0;
 }
 
-.two-columns__paragraph_margin {
-  margin: 30px 0px;
+.two-columns__paragraph:last-of-type {
+  margin: 0px;
+
 }
+
 
 .two-columns__span-accent {
   font-size: 24px;
@@ -150,12 +153,7 @@
   line-height: 1.15;
   font-size: 60px;
   font-weight: 600;
-}
-
-
-.section-title_theme_white {
   margin: 100px 0 0 0;
-
 }
 
 .section-subtitle {
@@ -180,7 +178,7 @@
   justify-content: space-between;
 }
 
-.table__cell_theme_white {
+.table__cell {
   width: 250px;
   color: rgb(0, 0, 0);
   margin-top: 60px;
@@ -201,6 +199,7 @@
 }
 
 
+
 .feynman {
   background-color: #f2f2f2;
   display: flex;
@@ -208,7 +207,7 @@
   align-items: center;
   text-align: center;
   position: relative;
-  height: 890px;
+  min-height: 890px;
 }
 
 
@@ -217,7 +216,7 @@
   line-height: 1.15;
   font-size: 120px;
   font-weight: 600;
-  z-index: 1;
+  z-index: 2;
   margin: 100px 0 0 0;
 }
 
@@ -225,7 +224,7 @@
   line-height: 51px;
   font-size: 36px;
   font-weight: normal;
-  z-index: 1;
+  z-index: 2;
   margin: 70px 0 0 0;
 }
 
@@ -236,7 +235,7 @@
   line-height: 51px;
   font-size: 36px;
   font-weight: normal;
-  z-index: 1;
+  z-index: 2;
   text-decoration: none;
 }
 
@@ -246,7 +245,7 @@
   left: 0px;
   height: 637px;
   width: 867px;
-  z-index: 0;
+  z-index: 1;
 
 }
 
@@ -258,7 +257,7 @@
   align-items: center;
   position: relative;
   color: white;
-  z-index: -2;
+  z-index: 1;
   overflow: hidden;
 }
 
@@ -269,6 +268,7 @@
   color: white;
   margin-right: 0;
   margin-top: 80px;
+  z-index: 1;
 }
 
 .table__heading_theme_dark {
@@ -291,14 +291,14 @@
   right: -210px;
   height: 877px;
   width: 877px;
-  z-index: -1;
+  z-index: 0;
 
 }
 
 .footer {
   min-height: 350px;
   background-color: #1f1f1f;
-  z-index: -1;
+  z-index: 0;
   display: flex;
   justify-content: center;
 }
@@ -306,7 +306,7 @@
 .footer__columns {
   display: flex;
   justify-content: space-between;
-  z-index: 0;
+  z-index: 1;
   position: relative;
   width: 90%;
   color: #f2f2f2;
@@ -320,7 +320,7 @@
   position: absolute;
   left: 0px;
   top: 0px;
-  z-index: 1;
+  z-index: 2;
 }
 
 .footer__author {
