--- a/styles/style.css
+++ b/styles/style.css
@@ -153,15 +153,17 @@
   font-size: 60px;
   font-weight: 600;
   margin: 100px 0 0 0;
+  z-index: 2;
 }
 
 .section-subtitle {
-  margin: 20px 0;
+  margin: 20px 0 0 0;
   margin-top: 20px;
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
   text-align: center;
+  z-index: 2;
 }
 
 .table {
@@ -190,9 +192,11 @@
   font-size: 18px;
   font-weight: normal;
   margin: 0 0 20px 0;
-
 }
 
+.table__text:last-of-type {
+  margin: 0px;
+}
 
 
 .feynman {
@@ -292,7 +296,7 @@
   right: -210px;
   height: 877px;
   width: 877px;
-  z-index: 1;
+  z-index: 0;
 
 }
 
