--- a/blocks/kaufman/__image/kaufman__image.css
+++ b/blocks/kaufman/__image/kaufman__image.css
@@ -1,5 +1,5 @@
 .kaufman__image {
-  background-image: url(../images/kaufman-triangle.svg);
+  background-image: url(../../../images/kaufman-triangle.svg);
   background-size: cover;
   position: absolute;
   top: 0px;
