--- a/blocks/video/__iframe/video__iframe.css
+++ b/blocks/video/__iframe/video__iframe.css
@@ -1,3 +1,10 @@
+.video__iframe {
+  position: relative;
+  bottom: -75px;
+  margin-top: -75px;
+
+}
+
 .video__iframe:first-of-type {
-    margin-right: 20px;
+  margin-right: 20px;
 }
