--- a/blocks/video/__iframe/video__iframe.css
+++ b/blocks/video/__iframe/video__iframe.css
@@ -1,10 +1,10 @@
 .video__iframe {
-  position: relative;
-  bottom: -75px;
-  margin-top: -75px;
-
+  border: 0;
+  width: 515px;
+  height: 316px;
+  margin-right: 20px;
 }
 
-.video__iframe:first-of-type {
-  margin-right: 20px;
+.video__iframe:last-of-type {
+  margin-right: 0px;
 }
