--- a/blocks/all-links/all-links.css
+++ b/blocks/all-links/all-links.css
@@ -1,4 +1,9 @@
+.all-links {
+  opacity: 1;
+  transition: opacity 0.5s;
+}
+
 .all-links:hover {
-    transition: opacity 0.5s linear;
-    opacity: 0.5;
+  transition: opacity 0.5s linear;
+  opacity: 0.5;
 }
