--- a/blocks/cards/__item/cards__item.css
+++ b/blocks/cards/__item/cards__item.css
@@ -1,12 +1,8 @@
 .cards__item {
-
-    width: 240px;
+  width: 240px;
+  margin-right: 100px;
 }
 
-.cards__item:nth-of-type(2) {
-    margin: 0 100px;
-}
-
-.cards__item:last-of-type {
-    margin: 0 100px;
+.cards__item:nth-child(3n) {
+  margin-right: 0;
 }
