--- a/blocks/header/__title/header__title.css
+++ b/blocks/header/__title/header__title.css
@@ -5,6 +5,7 @@
   font-size: 102px;
   line-height: 96px;
   font-weight: 600;
-  width: 730px;
   margin: 0 0 0 64px;
+  max-width: 730px;
+  width: 100%;
 }
