--- a/blocks/video/__iframes/video__iframes.css
+++ b/blocks/video/__iframes/video__iframes.css
@@ -1,5 +1,9 @@
 .video__iframes {
   display: flex;
   justify-content: center;
-  margin: 50px auto 0 auto;
+  margin: 0 auto;
+  position: relative;
+  top: 50px;
+  padding: 0;
+  list-style-type: none;
 }
